<resources>
    <string name="app_name">REWatchParty</string>


    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>


    <string name="user_name_placeholder">User Name</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>

    <string name="enter_button_text">Enter</string>


    <string name="ic_user_placeholder">Carlyon</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="create_your_account">Create your Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>


</resources>