<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <LinearLayout
        android:layout_width="590dp"
        android:layout_height="459dp"
        android:layout_marginEnd="152dp"
        android:background="#88959595"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="66dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <TextView
                android:id="@+id/SignUpButton"
                android:layout_width="83dp"
                android:layout_height="48dp"
                android:layout_marginStart="201dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/fui_bgApple"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/LoginButton"
                app:layout_constraintEnd_toStartOf="@+id/LoginButton"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/LoginButton"
                android:layout_width="73dp"
                android:layout_height="48dp"
                android:layout_marginEnd="212dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:textColor="@color/fui_bgApple"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/SignInButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/UserNameInput"
            android:layout_width="550dp"
            android:layout_height="57dp"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/user_name_placeholder"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textColor="@color/fui_bgApple"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/EmailInput"
            android:layout_width="553dp"
            android:layout_height="56dp"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#FFFCFC"
            android:backgroundTintMode="multiply"
            android:ems="10"
            android:hint="@string/email_placeholder"
            android:inputType="textEmailAddress"
            android:textColor="@color/fui_bgApple"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/PasswordInput"
            android:layout_width="553dp"
            android:layout_height="54dp"
            android:layout_marginLeft="20dp"
            android:autofillHints="@string/password_placeholder"
            android:ems="10"
            android:hint="@string/password_placeholder"
            android:inputType="textPassword"
            android:textColor="@color/fui_bgApple"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="553dp"
            android:layout_height="54dp"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/password_placeholder"
            android:ems="10"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:textColor="@color/fui_bgApple"
            android:textStyle="bold" />

        <Button
            android:id="@+id/EditButton"
            android:layout_width="159dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/enter_button_text"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>